# advent-of-code-2024

./: Makefile  pyproject.toml
advent_of_code_2024/day1/: part1.py  part2.py
advent_of_code_2024/day2/: part1.py  part2.py
advent_of_code_2024/day3/: part1.py  part2.py
advent_of_code_2024/day4/: part1.py  part2.py
advent_of_code_2024/day5/: part1.py  part2.py
advent_of_code_2024/day6/: part1.py
advent_of_code_2024/inputs/: __init__.py  day_4.txt
tests/day1/: test_part1.py  test_part2.py
tests/day2/: test_day2_part1.py  test_day2_part2.py
tests/day3/: test_day3_part1.py  test_day3_part2.py
tests/day4/: test_day4_part1.py  test_day4_part2.py
tests/day5/: test_day5_part1.py  test_day5_part2.py
tests/day6/: test_day6_part1.py
